src/test/ui/generator/sized-yield.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/sized-yield.rs:8:26
   |
LL |      let mut gen = move || {
   |  __________________________^
LL | |
LL | |        yield s[..];
LL | |    };
   | |____^ doesn't have a size known at compile-time
   |
   = help: within `str`, the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `str`
   = note: the yield type of a generator must have a statically known size

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/sized-yield.rs:12:23
   |
LL |    Pin::new(&mut gen).resume(());
   |                       ^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `str`, the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
